# satori-docs

./: .gitignore  .satori.yml  Dockerfile  Gemfile  README.md  _config.yml  package-lock.json  package.json  pyproject.toml  sitemap.py
.github/workflows/: release.yml  static.yml
docs/: asynchronous_and_synchronous_executions.md  config.md  github_ci.md  index.html  install.md  language_asserts.md  language_execution.md  language_inputs.md  language_playbooks.md  language_settings.md  mode.md  notifications.md  playbook.md  repo.md  teams.md  user_accounts.md
docs/examples/: ping.yml
docs/getting-started/: playbooks.md
docs/modes/: modes.md  monitor.md
docs/playbooks/: execution.md
satori_help/: __init__.py  gui.py  main.py  tui.py  webui.py
satori_help/docs/: README.md  _sidebar.md  cheatsheet.md  index.html  index.md  notifications.md  repo.md  teams.md
satori_help/docs/.vitepress/: config.mjs
satori_help/docs/_layouts/: default.html
satori_help/docs/getting-started/: execution-data.md  hello_world.md  install.md  playbooks.md  running-playbooks.md
satori_help/docs/modes/: modes.md  monitor.md  run.md  scan.md  shards.md
src/docs/: Dockerfile  README.md  _sidebar.md  asynchronous_and_synchronous_executions.md  config.md  github_ci.md  gitlab.md  index.html  install.md  language.md  language_asserts.md  language_execution.md  language_inputs.md  language_playbooks.md  language_settings.md  mode.md  monitor.md  notifications.md  playbook.md  repo.md  report.md  run.md  team.md  theme.css  user_accounts.md
src/satori_help/: gui.py  main.py
(+17 files in other folders)
