[project]
name = "satori-docs"
version = "1.3.25"
description = "Satori CI - Automated Testing"
authors = [
    {name = "Satori CI", email = "info@satori.ci"},
]
dependencies = [
    "textual>=0.27.0"
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://www.satori.ci"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
satori-docs = "satori_help:cli"
